--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,5 +1,8 @@
 %p#notice= notice
 
+%p= @user.email
+
+= link_to 'Sign Out', destroy_user_session_path, method: :delete
 
 = link_to 'Edit', edit_user_path(@user)
 \|
